# taigo

./: .gitignore  README.md  me.appadeia.Taigo.json  meson.build
data/: com.github.appadeia.Taigo.appdata.xml.in  com.github.appadeia.Taigo.desktop.in  com.github.appadeia.Taigo.gschema.xml  me.appadeia.Taigo.appdata.xml.in  me.appadeia.Taigo.desktop.in  me.appadeia.Taigo.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: debuglabel.ui  debugwindow.ui  food.ui  game.ui  gdb.c  global.vala  main.vala  meson.build  rps.ui  rps.vala  statemachine.vala  status.ui  taigo.gresource.xml  taigochi.vala  window.ui  window.vala
src/css/: app.css
